[gd_scene load_steps=9 format=2]

[ext_resource path="res://background/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Missions/WorldEnvironment.tscn" type="PackedScene" id=4]
[ext_resource path="res://background/BackgroundDebris.tscn" type="PackedScene" id=5]
[ext_resource path="res://Missions/Borders.tscn" type="PackedScene" id=6]
[ext_resource path="res://Missions/UI.tscn" type="PackedScene" id=7]
[ext_resource path="res://background/BackgroundAsteroids.tscn" type="PackedScene" id=8]
[ext_resource path="res://Missions/MissionTemplate.gd" type="Script" id=9]

[node name="MissionTemplate" type="Node2D"]
script = ExtResource( 9 )

[node name="TimerWave" type="Timer" parent="."]
one_shot = true

[node name="TimerSpawn" type="Timer" parent="."]
one_shot = true

[node name="World" type="Node2D" parent="."]

[node name="WorldEnvironment" parent="World" instance=ExtResource( 4 )]

[node name="Background" parent="World" instance=ExtResource( 1 )]

[node name="BackgroundAsteroids" parent="World" instance=ExtResource( 8 )]

[node name="BackgroundDebris" parent="World" instance=ExtResource( 5 )]

[node name="Borders" parent="World" instance=ExtResource( 6 )]

[node name="Player" type="Node2D" parent="."]

[node name="Player" parent="Player" instance=ExtResource( 3 )]
position = Vector2( 240, 210 )

[node name="UI" parent="Player" instance=ExtResource( 7 )]

[node name="Menus" type="Node2D" parent="."]

[connection signal="timeout" from="TimerWave" to="." method="_on_TimerWave_timeout"]
[connection signal="timeout" from="TimerSpawn" to="." method="_on_TimerSpawn_timeout"]
